add abstract, add section on DeFi loans

--- a/.gitignore
+++ b/.gitignore
@@ -301,3 +301,10 @@ TSWLatexianTemp*
 #*Notes.bib
 
 .DS_Store
+
+.vscode/*
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
