--- a/hackathon prototype/package.json
+++ b/hackathon prototype/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "@openzeppelin/contracts": "^4.8.2"
+    "@openzeppelin/contracts": "^4.8.2",
+    "@prb/math": "^3.3.1"
   }
 }
